Fixed color pick menu being too small

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -296,7 +296,7 @@ canvas {
 }
 #colorpickmenu {
     width:400px;
-    height:320px;
+    height:331px;
 }
 #colorpickmenu div{
     padding:5px;
